# UNC-OS-Practical2

./: .gitmodules  CMakeLists.txt  INSTALL.md  README.md
.github/actions/building/: action.yml
include/: commands.h  execution.h  global.h  jobs.h  utils.h
src/: commands.c  execution.c  global.c  jobs.c  main.c  utils.c
tests/: CMakeLists.txt  tests.c
